# bv16-floatingpoint

./: CMakeLists.txt
bv16/: CMakeLists.txt
bvcommon/: CMakeLists.txt
