# add_library( bv16
# bitpack.c
# bv.c
# coarptch.c
# decoder.c
# encoder.c
# excdec.c
# excquan.c
# fineptch.c
# g192.c
# gaindec.c
# gainquan.c
# levelest.c
# lspdec.c
# lspquan.c
# plc.c
# postfilt.c
# ptquan.c
# tables.c)

# install(TARGETS bv16
# 	ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
# )

# install(DIRECTORY bv16
# 	DESTINATION ${CMAKE_INSTALL_PREFIX}/include
# )
