# add_library( bv16
# 	a2lsp.c
# 	allpole.c
# 	allzero.c
# 	autocor.c
# 	cmtables.c
# 	levdur.c
# 	lsp2a.c
# 	ptdec.c
# 	stblchck.c
# 	stblzlsp.c
# 	utility.c
# )

# target_include_directories(bv16
# 	PUBLIC ${CMAKE_SOURCE_DIR}/bv16
# )

# install(DIRECTORY bv16
# 	DESTINATION ${CMAKE_INSTALL_PREFIX}/include
# )
